# rust-backend-boilerplate

./: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  Makefile  Makefile.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
database/migrations/: Cargo.toml
database/migrations/src/: main.rs
g/src/: main.rs  utils.rs
g/src/generators/: extractor.rs  feature.rs  middleware.rs  mod.rs  resource.rs
g/src/registrars/: extractors.rs  features.rs  middleware.rs  mod.rs  routes.rs  swagger.rs
generator/src/: main.rs
src/: lib.rs  main.rs
src/extractors/: mod.rs  validated_json.rs  validated_path.rs  validated_query.rs
src/features/health/: handler.rs  router.rs
src/infra/: config.rs  error.rs  extractor.rs  mod.rs
src/middleware/: mod.rs  request_id.rs
src/routes/: health.rs  mod.rs  swagger.rs
