[workspace]
members = [".", "db/migrations", "g"]

[package]
name = "rust-backend-boilerplate"
version = "0.1.0"
edition = "2024"
default-run = "rust-backend-boilerplate"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["catch-panic", "compression-full", "trace", "cors", "set-header", "limit"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
dotenvy = "0.15.7"
validator = { version = "0.19.0", features = ["derive"] }
utoipa = { version = "5.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = { version = "1.11.0", features = ["v4"] }
