[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "1.1.4", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
async-trait = "0.1"
tokio = { version = "1.52.3", features = ["full"] }
dotenvy = "0.15.7"

[[bin]]
name = "migration"
path = "src/main.rs"
